# RustHyperTemplate

./: Cargo.toml
src/: lib.rs
src/config/: opt.rs
src/http/: handler.rs  mod.rs
src/logic/: factorial.rs  mod.rs
