[package]
name = "container"
version = "0.1.0"
authors = ["Taylan Dogan <git@taylandogan.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8"
serde_json = "1.0"
structopt = "0.3"
anyhow = "1.0"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1
